--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html,body{
 .bar-item a {
 	font-family: 'Raleway', "sans-serif";
 	display: block;
-	/* color: white; */
+	color: white;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
