--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html,body{
 	text-decoration:bold;
 	float:left;
 }
-
+/* 
 #about {
 	color:#00B2A9;
 }
@@ -50,7 +50,7 @@ html,body{
 
 #resume {
 	color:#FF8200;
-}
+} */
 
 /*home page*/
 
