--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html,body{
 }
 
 .bar-item a {
-	font-family: 'Raleway', "sans-serif";
+	font-family: 'Roboto', "Helvetica";
 	display: block;
 	color: white;
 	text-align: center;
@@ -39,18 +39,18 @@ html,body{
 	text-decoration:bold;
 	float:left;
 }
-/* 
-#about {
+
+#about-link {
 	color:#00B2A9;
 }
 
-#projects {
+#projects-link {
 	color:#EF426F;
 }
 
-#resume {
+#resume-link {
 	color:#FF8200;
-} */
+}
 
 /*home page*/
 
