--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ html,body{
 	position: fixed;
 	width:100%;
 	height: 35px;
-	margin: 0;
+	margin-right: 10px;
 	padding: 0;
 	overflow: hidden;
-	font-weight: 300;
+	font-weight: 500;
 	-webkit-transition: 0.2s;
 	-moz-transition: 0.2s;
 	-ms-transition: 0.2s;
 	color: white;
+	background: #202020;
 	z-index: 100;
 }
 
@@ -27,7 +28,7 @@ html,body{
 	display: block;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 16px 16px;
 	text-decoration: none;
 }
 
@@ -68,7 +69,7 @@ html,body{
 	height:100%;
 	width:100%;
 	/* background-image:linear-gradient(rgba(32,32,32,.25), rgba(32,32,32,.25)); */
-	background:#202020;
+	background:#303030;
 	background-size:cover;
 	background-position:center;
 	background-repeat:no-repeat;
@@ -82,8 +83,6 @@ html,body{
 }
 .title {
 	font-family: Helvetica;
-/*	font-size:7em;
-*/	
 	font-size:8vw;
 	font-weight:300;
 	text-align: center;
