--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html,body{
 	padding:0px;
 	margin:0px;
+	font-family: 'Roboto', sans-serif;
 }
 /*navigation bar*/
 .navbar {
@@ -24,7 +25,6 @@ html,body{
 }
 
 .bar-item a {
-	font-family: Helvetica;
 	display: block;
 	color: white;
 	text-align: center;
@@ -82,7 +82,6 @@ html,body{
 	opacity:0.65;
 }
 .title {
-	font-family: Helvetica;
 	font-size:8vw;
 	font-weight:300;
 	text-align: center;
@@ -95,7 +94,6 @@ html,body{
 }
 
 .subtitle{
-	font-family: Helvetica;
 	text-align:center;
 	color:white;
 	font-weight:300;
@@ -216,7 +214,6 @@ html,body{
 }
 
 .about-title{
-	font-family: 'Roboto', "Helvetica";
 /*	font-size:5em;
 */	
 	font-size:6vw;
@@ -226,7 +223,6 @@ html,body{
 	margin:60px auto 20px auto;
 }
 .paragraph{
-	font-family:'Roboto', "Helvetica";
 	text-align:center;
 	color:white;
 /*	font-size:1.3em;
@@ -246,7 +242,6 @@ html,body{
 .header{
 	margin: 50px 0 0 0;
 	color:white;
-	font-family:'Roboto', "Helvetica";
 	text-align: center;
 }
 
