--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html,body{
 	width:100%;
 	height: 35px;
 	margin-right: 10px;
-	padding: 0;
+	padding: 20px 20px;
 	overflow: hidden;
 	font-weight: 500;
 	-webkit-transition: 0.2s;
