--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html,body{
 	position: fixed;
 	width:100%;
 	height: 50px;
-	padding: 20px 20px;
+	padding: 20px 20px 20px 20px;
 	overflow: hidden;
 	font-weight: 500;
 	-webkit-transition: 0.2s;
