--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ html,body{
 .navbar {
 	position: fixed;
 	width:100%;
-	height: 50px;
-	padding: 20px 20px 20px 20px;
+	height: 40px;
+	/* padding: 20px 20px 20px 20px; */
 	overflow: hidden;
 	font-weight: 500;
 	-webkit-transition: 0.2s;
@@ -25,9 +25,9 @@ html,body{
 
 .bar-item a {
 	display: block;
-	color: white;
+	color: #101010;
 	text-align: center;
-	padding: 16px 16px;
+	padding: 16px 16px 16px 16px;
 	text-decoration: none;
 }
 
@@ -40,18 +40,19 @@ html,body{
 	float:left;
 }
 
+#home-link {
+	background: 
+}
+
 #about-link {
-	color:#00B2A9;
 	background: #00B2A9;
 }
 
 #projects-link {
-	color:#EF426F;
 	background: #EF426F;
 }
 
 #resume-link {
-	color:#FF8200;
 	background: #FF8200;
 }
 
