--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ html,body{
 	position: fixed;
 	width:100%;
 	height: 40px;
-	/* padding: 20px 20px 20px 20px; */
+	padding: 0px 20px 0px 20px;
 	overflow: hidden;
 	font-weight: 500;
 	-webkit-transition: 0.2s;
 	-moz-transition: 0.2s;
 	-ms-transition: 0.2s;
-	color: white;
+	color: #101010;
 	background: #101010;
 	z-index: 100;
 }
@@ -28,6 +28,7 @@ html,body{
 	color: #101010;
 	text-align: center;
 	padding: 16px 16px 16px 16px;
+	width: 100px;
 	text-decoration: none;
 }
 
@@ -41,7 +42,7 @@ html,body{
 }
 
 #home-link {
-	background: 
+	background: #8A8D8F;
 }
 
 #about-link {
