--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 html,body{
 	padding:0px;
 	margin:0px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 /*navigation bar*/
 .navbar {
 	position: fixed;
 	width:100%;
-	height: 40px;
-	padding: 0px 20px 0px 20px;
-	overflow: hidden;
+	height: 50px;
+	padding: 0px 0px 0px 0px;
+	overflow: auto;
 	font-weight: 500;
 	-webkit-transition: 0.2s;
 	-moz-transition: 0.2s;
@@ -28,7 +28,7 @@ html,body{
 	color: #101010;
 	text-align: center;
 	padding: 16px 16px 16px 16px;
-	width: 100px;
+	width: 150px;
 	text-decoration: none;
 }
 
