--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ html,body{
 	background:#3f3e7a;
 	opacity:0.65;
 }
+
 .title {
 	font-size:8vw;
 	font-weight:300;
@@ -95,6 +96,31 @@ html,body{
 	left:50%;
 	transform: translate(-50%, -50%);
 
+}
+
+.titles:nth-child(1) {
+	animation-name: fade;
+	animation-fill-mode: both;
+	animation-iteration-count: infinite;
+	animation-duration: 10s;
+	animation-direction: alternate-reverse;
+}
+
+.titles:nth-child(2) {
+	animation-name: fade;
+	animation-fill-mode: both;
+	animation-iteration-count: infinite;
+	animation-duration: 10s;
+	animation-direction: alternate;
+}
+
+@keyframes fade {
+	0%,45% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 .subtitle{
