--- a/style.css
+++ b/style.css
@@ -95,7 +95,11 @@ html,body{
 	top:35%;
 	left:50%;
 	transform: translate(-50%, -50%);
+	position: absolute;
+}
 
+.titles {
+	position: absolute;
 }
 
 .titles:nth-child(1) {
