--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ html,body{
 
 .titles {
 	display: none;
-	font-size:8vw;
-	font-weight:300;
+	font-size:160px;
+	font-weight:500;
 	text-align: center;
 	position:fixed;
 	color: white;
@@ -125,7 +125,7 @@ html,body{
 	transform: translate(-50%, -50%);
 /*	font-size: 2em
 */
-	font-size:2.5vw;
+	font-size:48px;
 }
 
 .fa{
