--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html,body{
 .navbar {
 	position: fixed;
 	width:100%;
-	height: 55px;
+	height: 57px;
 	padding: 0px 0px 0px 0px;
 	overflow: auto;
 	font-weight: 500;
@@ -24,7 +24,7 @@ html,body{
 }
 
 .bar-item a {
-	display: block;
+	/* display: block; */
 	color: #101010;
 	text-align: center;
 	padding: 16px 16px 16px 16px;
@@ -37,7 +37,7 @@ html,body{
 }
 
 .bar-item .fa {
-	display: none;
+	font-size:16px;
 }
 
 #home {
@@ -145,7 +145,7 @@ html,body{
 	opacity:0.6;
 }
 
-@media (min-width: 601px) {
+@media (min-width: 801px) {
 	.nav-link {
 		display:block;
 	}
@@ -154,7 +154,7 @@ html,body{
 	}
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
 	.nav-link {
 		display:none;
 	}
