--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html,body{
 }
 
 .bar-item .fa {
-	font-size:16px;
+	font-size:20px;
 }
 
 #home {
@@ -69,7 +69,7 @@ html,body{
 	width:100%;
 	height:100%;
 	position:fixed;
-	overflow-y: scroll
+	overflow-y:hidden;
 
 }
 .main-pic {
