--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ html,body{
 	margin:0px;
 	font-family: 'Poppins', sans-serif;
 }
-/*navigation bar*/
+
+/* Navigation Bar */
+
 .navbar {
 	position: fixed;
 	width:100%;
@@ -24,7 +26,6 @@ html,body{
 }
 
 .bar-item a {
-	/* display: block; */
 	color: #101010;
 	text-align: center;
 	padding: 16px 16px 16px 16px;
@@ -61,7 +62,7 @@ html,body{
 	background: #FF8200;
 }
 
-/*home page*/
+/*Home*/
 
 .main-page{
 	padding:0px;
@@ -72,6 +73,7 @@ html,body{
 	overflow-y:hidden;
 
 }
+
 .main-pic {
 	display:inline-block;
 	height:100%;
@@ -80,13 +82,6 @@ html,body{
 	background-size:cover;
 	background-position:center;
 	background-repeat:no-repeat;
-}
-.tint{
-	position:absolute;
-	width:100%;
-	height:100%;
-	background:#3f3e7a;
-	opacity:0.65;
 }
 
 .titles {
@@ -106,19 +101,10 @@ html,body{
 	color:white;
 	font-weight:300;
 	position:relative;
-/*	font-size:2em;
-*/	
 	font-size:3.5vw;
 	top:49%;
 	left:50%;
 	transform: translate(-50%, -50%);
-}
-
-.invite{
-/*	font-size:1em;
-
-*/
-	font-size:1.5vw;
 }
 
 .media-buttons-area{
@@ -127,8 +113,6 @@ html,body{
 	top:55%;
 	left:50%;
 	transform: translate(-50%, -50%);
-/*	font-size: 2em
-*/
 	font-size:48px;
 }
 
@@ -160,7 +144,7 @@ html,body{
 	}
 	.bar-item .fa {
 		display:block;
-		width:40px;
+		width:30px;
 		height:25px;
 	}
 }
